--- a/CabbageFriends/css/style.css
+++ b/CabbageFriends/css/style.css
@@ -91,8 +91,8 @@ hr {
   }
 }
 .navbar-inverse {
-  background-color: #1abc9c;
-  border-color: #16a085;
+  background-color: #222222;
+  border-color: #222222;
 }
 
 .navbar-inverse .navbar-nav>li>a {
