--- a/CabbageFriends/css/style.css
+++ b/CabbageFriends/css/style.css
@@ -1,10 +1,3 @@
-/**
-* Template Name: Stanley
-* Template URL: https://templatemag.com/stanley-bootstrap-freelancer-template/
-* Author: TemplateMag.com
-* License: https://templatemag.com/license/
-*/
-
 body {
   background-color: #ffffff;
   font-family: 'Montserrat', sans-serif;
@@ -75,15 +68,12 @@ hr {
   margin: 1em 0;
   padding: 0;
 }
-
+/**
 .navbar {
   text-transform: uppercase;
   margin-bottom: 0px;
 }
 
-.navbar-inverse {
-  padding: 30px 0;
-}
 
 @media (max-width: 768px ) {
   .navbar-inverse {
@@ -91,8 +81,8 @@ hr {
   }
 }
 .navbar-inverse {
-  background-color: #1abc9c;
-  border-color: #16a085;
+  background-color: cadetblue;
+  border-color: palegreen;
 }
 
 .navbar-inverse .navbar-nav>li>a {
@@ -116,7 +106,15 @@ hr {
 .navbar-inverse .navbar-toggle {
   border-color: transparent;
 }
+**/
 
+.navbar-light{
+	background-color: cadetblue;
+	
+}
+.navbar-light {
+  padding: 30px 0;
+}
 .progress-bar-theme {
   background-color: #1abc9c;
 }
